fix skill margin on firefox

--- a/app/assets/stylesheets/promo.css.scss
+++ b/app/assets/stylesheets/promo.css.scss
@@ -85,7 +85,7 @@
     display: block;
     float: left;
     padding: 0 2%;
-    margin: 1% 2%;
+    margin: 4px 2%;
     border: solid 1px rgba(0,81,138,1);
     color: rgba(0,81,138,1);
   }
